[package]
name = "rust-parallel-options"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true # link-time optimizations

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3.12"
tokio = {version = "1.2.0", features = ["full"]}
